--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </style>
     </head>
   <body>
+    <h1>Acme Product Offerings</h1>;
 
     <!-- we will render HTML inside #products -->
     <div id='products'></div>
